# terminal-radio

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile.android  Makefile  README.md  tasks.md
android/: gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: cnr.m3u
android/app/src/main/java/co/terminal/radio/: AppConfig.kt  M3uParser.kt  MainActivity.kt  NetworkMonitor.kt  PlaybackModels.kt  RadioApplication.kt  RadioControlRepository.kt  RadioPlaybackService.kt  RadioPlayerManager.kt  RadioReceiver.kt  RadioScreen.kt  RadioViewModel.kt  StationAdapter.kt
android/app/src/main/res/drawable/: ic_broadcast.xml  ic_notification_pause.xml  ic_pause.xml  ic_play.xml  ic_radio.xml  ic_radio_large.xml  ic_skip_next.xml  ic_skip_previous.xml
android/app/src/main/res/layout/: activity_main.xml  item_station.xml
android/app/src/main/res/values/: colors.xml  themes.xml
docs/superpowers/plans/: 2026-06-18-terminal-radio-compose-playback.md  2026-06-21-lockscreen-station-list-custom-m3u.md  2026-06-21-radio-player-dashboard-redesign.md
docs/superpowers/specs/: 2026-06-18-terminal-radio-compose-playback-design.md  2026-06-21-lockscreen-station-list-custom-m3u-design.md  2026-06-21-radio-player-dashboard-redesign-design.md
src/: app.rs  config.rs  error.rs  event.rs  hls.rs  hls_stream.rs  m3u.rs  main.rs  player.rs  ts_demux.rs  ui.rs
