[package]
name = "terminal-radio"
version = "0.1.0"
edition = "2021"
description = "A terminal radio player with HLS support"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
symphonia = { version = "0.5", features = ["aac", "mp3", "isomp4"] }
cpal = "0.15"
reqwest = { version = "0.12", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"